--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "express-session": "^1.12.1",
     "mongoose": "^4.2.7",
     "morgan": "^1.6.1",
+    "nonce": "^1.0.3",
+    "oauth-signature": "^1.3.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
+    "request": "^2.67.0",
     "socket.io": "^1.3.7"
   }
 }
