--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "request": "^2.67.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "yelp": "^1.0.1"
   }
 }
